chore - improve static website (typos, links)